    allowing for easier debugging.

* docutils/io.py:

  - Fixed ``Input.decode`` method to apply heuristics only if no
    encoding is explicitly given, and to provide better reporting of
    decoding errors.

* docutils/nodes.py:

  - ``image`` element class changed to subclass of Element, not
    TextElement (it's an empty element, and cannot contain text).

* docutils/parsers/rst/states.py:

  - Added check for escaped at-mark to prevent email address recognition.
  - Fixed option lists to allow spaces inside ``<angle-bracketed option
    arguments>``.
  - Allowed whitespace in paths and URLs.

* docutils/parsers/rst/directives/__init__.py:

  - Allowed whitespace in paths (``path`` function).
  - Added ``uri`` directive option conversion function.

* docutils/parsers/rst/directives/images.py:

  - Allowed whitespace (stripped) in "image" & "figure" directive URLs.

* docutils/parsers/rst/directives/misc.py:

  - Fixed "include" and "raw" directives to catch text decoding
    errors.
  - Allowed whitespace in "include" & "raw" directive paths.

* docutils/parsers/rst/directives/tables.py:

  - Added "list-table" directive.
  - Caught empty CSV table bug.

* docutils/transforms/references.py:

  - Fixed mislocated internal targets bug, by relocating targets
    followed by a section into the title of that section.
  - Fixed duplicate footnote label bug.

* docutils/writers/html4css1.py:

  - Fixed unencoded stylesheet reference bug (characters like "&" in
    stylesheet references).
  - ``target`` nodes now appear as ``span`` tags (instead of ``a``
    tags).

* docutils/writers/latex2e.py:

  - Improved --use-latex-docinfo so that organization/contact/address
    fields are lumped with the last author field and appear on the
    titlepage.
  - Made sure the titlepage is always shown with --use-latex-docinfo,
    even if the document has no title.
  - Made sure that latex doesn't fill in today's date if no date field
    was given.


Release 0.3.7 (2004-12-24)